recipe update; cleaned up config file

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -83,6 +83,7 @@
     drop:
         - "铜币:200:400:1"
         - "蚁狮上颚:1:2:0.33"
+        - "灼炎弯刀:1:1:0.0667"
 风暴蚁狮:
     buffImmute:
         - "带电"
@@ -91,6 +92,7 @@
     drop:
         - "铜币:200:300:1"
         - "风暴之颚:1:1:1"
+        - "灼炎弯刀:1:1:0.0667"
 巫毒恶魔:
     buffInflict:
         - "失明|600|0.33"
