--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -1606,6 +1606,8 @@ TNT:
     trailSize: 0.25
     trailStepSize: 0.5
     trailLingerTime: 5
+    buffInflict:
+        - "剧毒|30|1"
 风暴剑气:
     projectileSize: 0.25
     autoTrace: true
